fix: improve dark mode

--- a/packages/vuesax/src/components/table/tr/style.scss
+++ b/packages/vuesax/src/components/table/tr/style.scss
@@ -61,8 +61,7 @@
         }
     }
     .vs-table__td {
-        background: -color("bg", 0.1);
-        color: -color("bg", 1);
+        color: -color("text", 1);
     }
     &.vs-change-color {
         &:hover {
